ingress-controller/nginx-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-new
spec:
  controller: nginx.org/ingress-controller
