ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capestone-ingress
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    nginx.org/server-snippets: |
      location / {
        return 302 /;
      }      
spec:
  rules:
  - host: abdul.handyguide.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /data
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
